# updated-flutter-app

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  compose.override.dist.yml  compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_spotify_credentials.py  0003_attachment_sti.py  007_admin_project.py  7693fbe3cf8d_add_suspended_to_userstatus.py  a1b2c3d4e5f6_add_email_verification_fields.py  a2b3c4d5e6f7_add_soundcloud_subject_to_users.py  a9b8c7d6e5f4_add_avatar_path_to_users.py  b4c5d6e7f8a9_add_requested_by_to_friends.py  c8d9e0f1a2b3_add_post_likes_comments_notifications.py  d4e5f6a7b8c9_add_apple_subject_to_users.py  e7f6a5b4c3d2_add_google_subject_to_users.py  f1e2d3c4b5a6_add_mfa_to_users.py
backend/src/backend/: admin.py  main.py
backend/src/backend/core/: admin_deps.py  config.py  database.py  decorators.py  deps.py  security.py
backend/tests/: conftest.py
backend/tests/contract/: test_admin_auth.py  test_admin_friend_relationships.py  test_admin_message_privacy.py  test_admin_users_and_content.py  test_friends_contract.py  test_messages_contract.py  test_music_search_contract.py  test_posts_contract.py  test_profiles_contract.py
backend/tests/integration/: test_posts_integration.py
backend/tests/integration/core/: test_admin_deps.py  test_database.py
backend/tests/integration/infrastructure/: test_admin_action_repository.py
backend/tests/unit/: test_posts_use_cases.py
backend/tests/unit/application/: test_admin_audit.py  test_admin_auth.py  test_admin_content.py  (+2 more)
(+408 files in other folders)
